--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -9,7 +9,10 @@
 	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials. All products are guaranteed for this decade and the next.</p>
 
 	<p>Handmade in Chicago, Illinois, USA</p>
+	
+</div>
+
+<div id="about_links">	
 	<%= link_to "Email", "mailto:info@decadeleather.com" %>
 	<%= link_to "Fine Print", policies_path %>
 </div>
-
