--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,4 @@
-<h1>Catalog</h1>
-<div id="styles">
-  <ul>
-    <li>All</li>
-    <li>Billfolds</li>
-    <li>Card Wallets</li>
-    <li>ID Wallets</li>
-    <li>Zip Wallets</li>
-    <li>Notebooks</li>
-  </ul>
-</div>
+<h1>Products</h1>
 <table>
   <thead>
     <tr>
