--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,8 +37,8 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Cancel Account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Completely remove your account information from our system.</p> <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure you want to delete your account?" }, method: :delete %>
 
 <%= link_to "Back", :back %>
