--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -10,6 +10,7 @@
   <%= javascript_include_tag 'home' %>
   <%= javascript_include_tag 'owl.carousel.min' %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
