--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -260,7 +260,7 @@ h1 {
 #product_list {
 
 	float: left;
-	width: 75%;
+	width: 100%;
 
 }
 
@@ -641,42 +641,6 @@ h1 {
 
 	}
 
-	#product_images {
-    float: none;
-    width: 100%;
-    max-width: 100%;
-	}
-
-	#product_info {
-    
-    margin: 1.25em 0 0 0;
-    width: 100%
-  }
-
-  h1 {
-
-  	font-size: 2.3em;
-
-  }
-
-  #price {
-
-		font-size: 1.5em;  	
-
-  }
-
-  .custom_price {
-
-		font-size: 1.2em;  	
-
-  }
-
-  #cart_button, #custom_cart_button, #checkout_button {
-
-  	font-size: 1.25em;
-
-  }
-
   #pages_nav {
 
   	padding: 0 8%;
@@ -689,6 +653,23 @@ h1 {
   	display: inline-block;
   	padding: 0;	
 
+  }
+
+}
+
+@media screen and (max-width:750px){
+
+  
+	#product_images {
+    float: none;
+    width: 100%;
+    max-width: 100%;
+	}
+
+	#product_info {
+    
+    margin: 1.25em 0 0 0;
+    width: 100%
   }
 
   #product_list {
@@ -717,7 +698,7 @@ h1 {
 
   }
 
-  .dropdown_content li {
+    .dropdown_content li {
 
   	font-size: 17px;
 
@@ -754,4 +735,33 @@ h1 {
 	
 	}
 
+	h1 {
+
+  	font-size: 2em;
+
+  }
+
+  #price {
+
+		font-size: 1.5em;  	
+
+  }
+
+  .custom_price {
+
+		font-size: 1.2em;  	
+
+  }
+
+  #cart_button, #custom_cart_button, #checkout_button {
+
+  	font-size: 1.25em;
+
+  }
+
+  #cart_items {
+
+  	width: 100%;
+
+  }
 }
