--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -634,7 +634,7 @@ h1 {
 
 #checkout_button_link {
 
-	margin: 1em 0 0 0;
+	margin: 0;
 
 }
 
@@ -646,6 +646,36 @@ h1 {
 #clear_cart {
 
 	margin-left: 1em;
+
+}
+
+.order_status {
+
+	margin: 0 0 1em 0;
+	font-size: 1.1em;
+
+}
+
+#order_table {
+
+  width: 100%;
+  padding: 15px;
+  border: 1px solid #888;
+  border-spacing: 0px;
+  margin: 1em 0;
+  text-align: right;
+}
+
+#order_table td {
+
+  border-top: 1px solid #888;
+  padding: 1em 0;
+
+}
+
+#order_table th {
+
+  padding: 1em 0;
 
 }
 
@@ -714,7 +744,7 @@ h1 {
 
   }
 
-    .dropdown_content li {
+  .dropdown_content li {
 
   	font-size: 17px;
 
@@ -726,7 +756,7 @@ h1 {
 
   }
 
-  #session a {
+  #session a, #session .dropdown {
 
   	font-size: 1.15em;
 
