--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
 <footer class="footer">
+	<hr class="small-centered">
 	<div class="social_nav">
 		<ul>
 			<li><a class="fa fa-instagram" href="https://www.instagram.com/decadeleather"></a></li>
