--- a/app/views/page/policies.html.erb
+++ b/app/views/page/policies.html.erb
@@ -1,17 +1,20 @@
-<div class="page_title">
-	<h1>Fine Print</h1>
+<div id="about_content">
+	<div class="page_title">
+		<h1>Fine Print</h1>
+	</div>
+	
+	<hr class="small">
+
+	<ul id="policies">
+		<li><h3>Shipping</h3>
+		<p>Decade ships parcels First Class through the United States Postal Service. All other shipping arrangements must be made prior to purchase. Contact me for more information.</p></li>
+		<li><h3>Made-to-Order & Custom</h3>
+		<p>All leather goods, with the exception of custom products, are in-stock and ready-to-ship unless otherwise noted. Custom products usually require at least a 21 day production time.</p></li>
+		<li><h3>Refunds & Exchanges</h3>
+		<p>Decade stands behind its craftsmanship and will issue refunds and/or replacements on unused leather goods due to defective manufacturing or craftsmanship.</p>
+		<p>All sales are final. Due to the nature of custom leatherwork, refunds will not be issued for used items or for reasons other than defective manufacturing.</p>
+		<p>Shipping, Paypal and other fees are nonrefundable.</p></li>
+		<li><h3>Additional Terms</h3>
+		<p>Due to the variations in screen calibrations, the actual color of your leather goods may differ from its appearance on your screen. Actual custom products' grain/texture may differ from example images.</p></li>
+	</ul>
 </div>
-
-<h2>Refunds & Exchanges</h2>
-<p>Decade stands behind its craftsmanship and will issue refunds and/or replacements on unused leather goods due to defective manufacturing or craftsmanship.</p>
-<p>All sales are final. Due to the nature of custom leatherwork, refunds will not be issued for used items or for reasons other than defective manufacturing.</p>
-<p>Shipping, Paypal and other fees are nonrefundable.</p>
-<h2>Shipping</h2>
-<p>Decade ships parcels First Class through the United States Postal Service.<p>
-<p>All other shipping arrangements must be made prior to purchase. Contact us for more information.</p>
-
-<h2>Made-to-Order & Custom</h2>
-<p>All leather goods, with the exception of custom products, are in-stock unless otherwise noted. Custom products require a 3-5 week production time.</p>
-
-<h2>Additional Terms</h2>
-<p>Due to the variations in screen calibrations, the actual color of your leather goods may differ from its appearance on your screen. Actual custom products' grain/texture may differ from example images.</p>
