--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@ body {
 
 #content {
 
-	margin: .75em 0 0 0;
+	margin: 1.5em 0 0 0;
 	min-height: 350px;
 
 }
@@ -135,9 +135,9 @@ h1 {
 
 	width: 100%;
 	padding: 0 4.5em 0 4.5em;
-	color: #8e8e8e;
+	color: #555;
 	font-size: 1.19em;
-	letter-spacing: .04em;
+	letter-spacing: .1em;
 	text-decoration: none;
 	text-transform: uppercase;
 
@@ -329,7 +329,7 @@ h1 {
 
 	text-decoration: none;
 	font-size: 1.7em;
-	color: #777;
+	color: #555;
 
 }
 
@@ -345,7 +345,7 @@ h1 {
 
 	max-width: 145px;
   display: block;
-  margin: 1.5em auto 1.25em auto;	
+  margin: 2em auto 2.5em auto;	
 }
 
 #price {
@@ -353,7 +353,7 @@ h1 {
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-weight: 600;
   font-size: 1.19em;
-  color: #777;
+  color: ##555;
   letter-spacing: .05em;
 
 }
@@ -363,7 +363,7 @@ h1 {
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-weight: 600;
   font-size: 1em;
-  color: #777;
+  color: ##555;
   letter-spacing: .05em;
 
 }
@@ -544,7 +544,7 @@ h1 {
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-weight: 600;
   font-size: 1.5em;
-  color: #777;
+  color: #555;
   letter-spacing: .05em;
   display: inline;
 
@@ -589,9 +589,10 @@ h1 {
 
 }
 
-#about_content {
 
-	margin-bottom: 1em;
+#about_links {
+
+	margin: 1em 0 0 0;
 
 }
 
@@ -599,7 +600,6 @@ h1 {
 
 	margin: 10px 0 0 0;
 	line-height: 1.5;
-
 }
 
 #cart_contents li {
@@ -612,8 +612,6 @@ h1 {
  
   text-align: right;
   width: 100%;
-  padding: 15px;
-  border: 1px solid #888;
   border-spacing: 0px;
   margin: 0 0 1em 0;
 
@@ -623,6 +621,7 @@ h1 {
 #cart_items p {
 
 	margin: 0 5px 0 5px;
+	font-weight: normal;
 
 }
 
@@ -651,16 +650,20 @@ h1 {
 
 .order_status {
 
-	margin: 0 0 1em 0;
+	margin: 2em 0 1em 0;
 	font-size: 1.1em;
+
+}
+
+#order_content {
+
+	margin: 4em 0 0 0;
 
 }
 
 #order_table {
 
   width: 100%;
-  padding: 15px;
-  border: 1px solid #888;
   border-spacing: 0px;
   margin: 1em 0;
   text-align: right;
@@ -676,8 +679,50 @@ h1 {
 #order_table th {
 
   padding: 1em 0;
+  font-weight: normal
+}
+
+#policies {
+
+	list-style: none
 
 }
+
+#policies h3 {
+
+	margin-top: 2em;
+
+}
+
+hr.small {
+
+	width: 50px;
+
+}
+
+hr.small-centered {
+
+	width: 50px;
+	margin: 0 auto 2em auto;
+
+}
+
+#cart_contents {
+
+	margin: 4em 0 0 0;
+
+}
+
+p#empty {
+
+	font-family: cardo;
+  font-size: 1.19em;
+  line-height: 1.7;
+  color: #555;
+  text-align: center;
+
+}
+
 
 @media screen and (max-width:939px){
 
