--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Edit Order No. <%= @order.id %></h1>
+<div class="page_title">
+	<h1>Edit Order No. <%= @order.id %></h1>
+</div>
 
 <%= render 'form' %>
 
