--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -2,17 +2,22 @@
 	<h1>About</h1>
 </div>
 
+<hr class="small">
+
 <div id="about_content">
+
 	<img></img>
+	
 	<p>Decade handcrafts exceptional leather goods.</p>
 
 	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials. All products are guaranteed for this decade and the next.</p>
 
 	<p>Handmade in Chicago, Illinois, USA</p>
 	
-</div>
 
-<div id="about_links">	
-	<%= link_to "Email", "mailto:info@decadeleather.com" %>
-	<%= link_to "Fine Print", policies_path %>
+	<div id="about_links">	
+		<%= link_to "Email", "mailto:info@decadeleather.com" %>
+		<%= link_to "Fine Print", policies_path %>
+	</div>
+
 </div>
