--- a/app/views/custom_products/new.html.erb
+++ b/app/views/custom_products/new.html.erb
@@ -10,5 +10,9 @@
 	<div class="page_title">
 		<h1>Custom <%= @category %></h1>
 	</div>
-	<%= render 'form' %>
+	<hr class="small">
+	
+	<div id="main_content">
+		<%= render 'form' %>
+	</div>
 </div>
