--- a/app/views/page/custom.html.erb
+++ b/app/views/page/custom.html.erb
@@ -2,18 +2,22 @@
   <h1>Custom Leather Goods</h1>
 </div>
 
-<% custom_products = {"Billfold" => "200", "Card Wallet" => "150", "ID Wallet" => "80", "Notebook" => "120"} %>
+<hr class="small">
 
-<div id="product_list">
-  <% custom_products.each do |product, price| %>
-    <%= link_to builder_path(:category => product) do %>
-    	<div class="product_tile">
-        <%= image_tag(product, :class => "catalog_image" , :alt => product) %>
-      	<div class="product_info">
-        	<div class="product_title"><%= product %></div>
-        	<div class="custom_price">From <%= number_to_currency(price, :unit => '$') %></div><br>
-    		</div>
-    	</div>
+<div id="main_content">
+  <% custom_products = {"Billfold" => "200", "Card Wallet" => "150", "ID Wallet" => "80", "Notebook" => "120"} %>
+
+  <div id="product_list">
+    <% custom_products.each do |product, price| %>
+      <%= link_to builder_path(:category => product) do %>
+      	<div class="product_tile">
+          <%= image_tag(product, :class => "catalog_image" , :alt => product) %>
+        	<div class="product_info">
+          	<div class="product_title"><%= product %></div>
+          	<div class="custom_price">From <%= number_to_currency(price, :unit => '$') %></div><br>
+      		</div>
+      	</div>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
