--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,6 +88,7 @@ h1 {
 	width: 100%;
 	height: 2em;
 	background: #FFF;
+		
 }
 
 #session a{
@@ -436,6 +437,15 @@ h1 {
 	float: none;
 	padding: 0;
 	margin: 0;
+	text-transform: none;
+  color: #8e8e8e;
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+
+#session .dropdown_content a:hover {
+
+	color: #8f6806;
 
 }
 
