add canvas element and set height and width inline

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -221,8 +221,8 @@
 
       <br>
 
-      <div id="product_view">
-      </div>
+      <cavnas id="product_view" height="500px" width="500px">
+      </canvas>
       
       <div id="view_choice">
         <%= label_tag :view %><br>
