create canvas and image create flow

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -221,7 +221,7 @@
 
       <br>
 
-      <cavnas id="product_view" height="500px" width="500px">
+      <canvas id="product_view" height="500px" width="500px">
       </canvas>
       
       <div id="view_choice">
