add imgurl to custom product, set with javascript functionality

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -35,7 +35,11 @@
   <div class="hidden_field">
     <%= f.text_area :options %>
   </div>
-  
+
+ <div class="hidden_field">
+    <%= f.text_area :imgurl %>
+  </div>
+    
   <div id="custom_options">
    
     <div id="options_panel">  
