--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -38,6 +38,8 @@
 					<td>
 						<% if defined?(product.main_image) %>
 							<%= image_tag(product.main_image(:thumb), :class => "cart_image" , :alt => product.name)%>
+						<% else %>
+							<%= image_tag(product.imgurl, :class => "cart_image" , :alt => product.name)%>
 						<% end %>
 					</td>
 					<td><%= link_to product.name, product %></td>
