--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -225,13 +225,24 @@
 
       <br>
 
-      <canvas id="product_view" height="547px" width="730px">
-      </canvas>
+      <div id="view_container">
+        <img id="interior_materials_image" class="product_image"></img>
+        <img id="lining_image" class="product_image"></img>
+        <img id="pocket_l3_image" class="product_image"></img>
+        <img id="pocket_r3_image" class="product_image"></img>
+        <img id="pocket_l2_image" class="product_image"></img>
+        <img id="pocket_r2_image" class="product_image"></img>
+        <img id="pocket_l1_image" class="product_image"></img>
+        <img id="pocket_r1_image" class="product_image"></img>
+        <img id="stitching_image" class="product_image"></img>        
+        <canvas id="product_view" height="547px" width="730px">
+        </canvas>
+      </div>
       
       <div id="view_choice">
         <%= label_tag :view %><br>
-        <%= radio_button_tag "view", "exterior", :value => "checked" %>Exterior 
-        <%= radio_button_tag "view", "interior" %>Interior 
+        <%= radio_button_tag "view", "exterior" %>Exterior 
+        <%= radio_button_tag "view", "interior", :value => "checked" %>Interior 
       </div>
     </div>
 
