--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -191,23 +191,20 @@ h1 {
 .required_field {
 
   display: block;
-  margin: 0 0 .35em 0;
-  padding: 0 0 .35em 10px;
+  margin: 0 0 .7em 0;
+  padding: 0 0 .35em 0;
 
 }
 
 .required_section {
 
   display: block;
-  margin: 1em 0 0 0;
-  border: 2px solid #888;
 
 }
 
 .required_section .required_section {
 
 	margin: 0 0 0 0;
-	border: 0;
 
 }
 
@@ -531,7 +528,7 @@ h1 {
 #custom_options label {
 
 	color: #555;
-  font-size: 1.19em;
+  font-size: 1.25em;
   letter-spacing: .04em;
   font-family: cardo;
 
@@ -540,22 +537,8 @@ h1 {
 #custom_options span {
 
 	font-family: cardo;
-  font-size: 1.19em;
+  font-size: 1.25em;
   color: #555;
-
-}
-
-#custom_options p {
-
-  font-size: 1.3em;
-  line-height: 1.3;
-  margin: 0 0 .35em 0;
-  color: #FFF;
-  font-family: verdana, arial, helvetica, sans-serif;
-  letter-spacing: .04em;
-  border-bottom: 2px solid #888;
-  padding: 2px 0 0 10px;
-  background-color: #888;
 
 }
 
@@ -586,7 +569,7 @@ h1 {
 #options_panel {
 
 	width: 40%;
-	margin: -1em 1% 0 0;
+	margin: 1em 1% 0 0;
 	display: inline;
 	float: left;
 
