--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -69,7 +69,7 @@
 
         <% if @category == "ID Wallet" %>
           <div id="pockets_interior">
-            <%= label_tag :pockets_interior, "Use Exterior Leather for Pockets" %><br>
+            <%= label_tag :pockets_interior, "Match Pocket to Exterior" %><br>
             <%= check_box_tag :pockets_interior, 1, true %>
           </div> 
         <% end %>
@@ -113,7 +113,7 @@
 
         <% if @category != "ID Wallet" %>
           <div id="pockets_interior">
-            <%= label_tag :pockets_interior, "Use Interior Leather for Pockets" %><br>
+            <%= label_tag :pockets_interior, "Match Pockets to Interior" %><br>
             <%= check_box_tag :pockets_interior, 1, true %>
           </div> 
         <% end %>
